# fdic-branch-analyzer

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  app.py  config_template.txt  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run_web.py  setup.py  test_complete_pdf.py
config/: __init__.py  config.py
docs/: AI_ANALYSIS_FEATURES.md  CLAUDE_SETUP.md  LOGGING_SYSTEM.md  README.md
docs/prompts/: reporting_prompt.txt
docs/query_templates/: branch_report.sql
examples/: demo_ai_switching.py
scripts/: debug_pdf.py  debug_pdf_data.py  generate_run_report.py  generate_sample_pdf.py  query_cost_details.py  setup_gcp_credentials.py  test_logging.py  view_bq_logs.py  view_logs.py
scripts/deploy/: deploy.sh
src/: __init__.py
src/analysis/: __init__.py  ai_tracker.py  gpt_utils.py
src/core/: main.py
src/reporting/: __init__.py  pdf_report_generator.py  report_builder.py
src/utils/: bq_tracker.py  bq_utils.py  county_reference.py  progress_tracker.py  run_logger.py
static/css/: style.css
static/docs/: API.md  DEPLOYMENT.md  README.md
static/js/: app.js
templates/: index.html
tests/: test_ai_analysis.py  test_claude_integration.py  test_openai_integration.py  test_pdf_formatting.py  test_pdf_structure.py  test_setup.py
web/: _config.yml  index.html
web/css/: style.css
web/js/: app.js
